--- a/car_collection/templates/base.html
+++ b/car_collection/templates/base.html
@@ -34,7 +34,7 @@
                     </a>
                     <!--User Auth Check for SignIn/SignUp Nav Buttons-->
                     
-                    <a href="">
+                    <a href="{{ url_for('auth.logout') }}">
                         <li>Log Out</li>
                     </a>
                     
